change method of get file crop

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.0.6",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "eslint": "8.29.0",
