--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.3.1",
     "next": "13.0.6",
     "pdf-lib": "^1.17.1",
     "react": "18.2.0",
